test/valid/57163_for_loop/for_loop.mag
-- Author: 57163, Guilherme Dias

fun increment(n, inc) : (Int, Int) -> Int =
	if inc == 0 then n else increment(n + 1, inc - 1)

fun for(i, max, inc) : (Int, Int, Int) -> Unit =
	while i < max do (
		print(i);
		i = increment(i, inc)
	)

fun main (_) : Unit -> Unit =
	for(0, 10, 1)
