test/invalid-semantics/57163_multiple_print_statements/multiple_print_statements.mag
-- Author: 57163, Guilherme Dias


fun main (_) : Unit -> Unit = 
	print(true, false, true, unit, false)
